Unify FilterSearchItem into FEValue, also apply removal of FilterSearchType, making tests explicit